# Voxel-tracer

./: .gitignore  Cargo.toml  a  build.rs
assets/: scene.vox
deprecated/: _main_vulkan.rs  ogt_voxel_meshify.cpp  ogt_voxel_meshify.hpp
shaders/: v.frag  v.vert
src/: main.rs
src/renderer/: loader.rs  mod.rs  ogt_voxel_meshify.rs  world.rs
